apps/vagrant/tool-miniflux/deploy/miniflux-deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: miniflux
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 128Mi
