apps/vagrant/tool-miniflux/deploy/reminiflux-deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reminiflux
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: reminiflux
        resources:
          requests:
            cpu: 25m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 16Mi
