apps/vagrant/tool-miniflux/deploy/miniflux-ingress-homepage-widget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  annotations:
    #gethomepage.dev/widget.key: "changeme"
